changed title to something appropriate

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>simple l system</title>
     <script data-main="js/main" src="js/lib/require.js"></script>
 
   </head>
